fixed compatibility issue with template "vector"
text in white input field was displayed as white text, so it was invisible -> added css color definition

--- a/all.css
+++ b/all.css
@@ -1,5 +1,9 @@
 #iphelperinput {
-	text-align: center; 
+	text-align: center;
+	max-width: 95%;
+	width: 400px;
+	color: #000000;
+	background-color: #ffffff;
 }
 
 .iphelper {
